Added image to grid view and displays the html file for editing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Email Template Customizer</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <div id="category-selection">
@@ -16,10 +16,8 @@
   </div>
 
   <div id="template-selection">
-    <h2>Select a Template</h2>
-    <div id="template-grid"></div>
+    <!-- Dynamic content will be loaded here by JavaScript -->
   </div>
-
 
   <div id="customize-template">
     <h2>Customize Your Template</h2>
