--- a/Index/index.html
+++ b/Index/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +18,7 @@
             <h1 class="logo">TemplateHub</h1>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
+                <li><a href="../Features/index.html">Features</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="../Categories/category.html">Templates</a></li>
                 <li><a href="#">Contact</a></li>
