--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 class="logo">TemplateHub</h1>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="../Features/index.html">Features</a></li>
+                <li><a href="./Features/index.html">Features</a></li>
                 <li><a href="#">Pricing</a></li>
-                <li><a href="../Categories/category.html">Templates</a></li>
+                <li><a href="./Categories/category.html">Templates</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
