--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="./Features/index.html">Features</a></li>
                 <li><a href="#">Pricing</a></li>
-                <li><a href="./Categories/category.html">Template</a></li>
+                <li><a href="./Categories/category.html">Templates</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
